--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   kiwi: ^4.0.2
   rxdart: ^0.27.5
   freezed_annotation: ^2.1.0
-  build_runner: ^2.2.0
+  relation: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +24,7 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   freezed: ^2.1.0+1
+  build_runner: ^2.2.0
 
 flutter:
   uses-material-design: true
